# opencv-shape-recog

./: .gitignore  CMakeLists.txt  Main.cpp  Parser.cpp  Parser.h  README.md  SpecFinder.cpp  SpecFinder.h  Specification.cpp  Specification.h  specs
